--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "breadcrumbs",
-    "version": "0.0.1-alpha",
+    "version": "1.0.0",
     "description": "Built to keep a previous path history of anything. Done in JavaScript.",
     "homepage": "https://github.com/JohnPittman/breadcrumbs-js",
     "authors": ["John Pittman <johnrichadrpittman@gmail.com>"],
