--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "breadcrumbs",
-    "version": "0.0.1-alpha",
+    "version": "1.0.0",
     "description": "Built to keep a previous path history of anything. Done in JavaScript.",
     "main": "dist/breadcrumbs.min.js",
     "files": ["src/", "dist/", "LICENSE", "README"],
