--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "breadcrumbmanager",
-    "version": "1.0.6",
+    "version": "1.0.7",
     "description": "Built to keep a previous path history of anything. Done in JavaScript.",
     "main": "src/breadcrumbmanager.min.js",
     "files": ["src/", "dist/", "LICENSE", "README"],
@@ -8,7 +8,7 @@
         "type": "git",
         "url": "https://github.com/JohnPittman/breadcrumbmanager-js.git"
     },
-    "keywords": ["fast", "optimized", "umd", "universal", "modular", "js", "module", "javascript", "breadcrumbs", "bread", "crumb", "manager", "history", "track", "path"],
+    "keywords": ["fast", "optimized", "umd", "universal", "modular", "js", "module", "javascript", "breadcrumbsmanager", "bread", "crumb", "manager", "history", "tracker", "tracking", "path"],
     "author": "John Pittman",
     "license": "MIT",
     "bugs": {
