--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
     "name": "breadcrumbmanager",
-    "version": "1.0.7",
+    "version": "1.1.0",
     "description": "Built to keep a previous path history of anything. Done in JavaScript.",
-    "main": "src/breadcrumbmanager.min.js",
+    "main": "src/BreadCrumbManager.js",
     "files": ["src/", "dist/", "LICENSE", "README"],
     "repository": {
         "type": "git",
         "url": "https://github.com/JohnPittman/breadcrumbmanager-js.git"
     },
-    "keywords": ["fast", "optimized", "umd", "universal", "modular", "js", "module", "javascript", "breadcrumbsmanager", "bread", "crumb", "manager", "history", "tracker", "tracking", "path"],
+    "keywords": ["fast", "optimized", "umd", "universal", "modular", "js", "module", "javascript", "breadcrumbsmanager", "breadcrumbmanager", "history", "tracker", "tracking", "path"],
+
     "author": "John Pittman",
     "license": "MIT",
     "bugs": {
