--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
     "name": "breadcrumbmanager",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "Built to keep a previous path history of anything. Done in JavaScript.",
-    "main": "src/BreadCrumbManager.js",
+    "main": "src/BreadcrumbManager.js",
     "files": ["src/", "dist/", "LICENSE", "README"],
     "repository": {
         "type": "git",
         "url": "https://github.com/JohnPittman/breadcrumbmanager-js.git"
     },
     "keywords": ["fast", "optimized", "umd", "universal", "modular", "js", "module", "javascript", "breadcrumbsmanager", "breadcrumbmanager", "history", "tracker", "tracking", "path"],
-
     "author": "John Pittman",
     "license": "MIT",
     "bugs": {
